cilium_netpolicy_examples/CiliumClusterwideNetworkPolicy4.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "wildcard-from-endpoints"
spec:
  description: "Policy for ingress allow to kube-dns from all Cilium managed endpoints in the cluster"
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s-app: kube-dns
  ingress:
  - fromEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP


# Allow All Cilium Managed Endpoints To Communicate With Kube-dns
# The following example allows all Cilium managed endpoints in the cluster to 
# communicate with kube-dns on port 53/UDP in the kube-system namespace.
