cilium_netpolicy_examples/CiliumNetworkPolicy19.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all-egress"
spec:
  endpointSelector:
    matchLabels:
      role: restricted
  egress:
  - {}


#An endpoint can be put into the default deny mode at ingress or egress 
#if a rule selects the endpoint and contains the respective rule section ingress or egress.
