cilium_netpolicy_examples/CiliumNetworkPolicy30.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cidr-rule"
spec:
  endpointSelector:
    matchLabels:
      app: myService
  egress:
  - toCIDR:
    - 20.1.1.1/32
  - toCIDRSet:
    - cidr: 10.0.0.0/8
      except:
      - 10.96.0.0/12

#Allow to external CIDR block
#This example shows how to allow all endpoints with the label app=myService to 
#talk to the external IP 20.1.1.1, as well as the CIDR prefix 10.0.0.0/8, but not 
#CIDR prefix 10.96.0.0/12
