cilium_netpolicy_examples/CiliumNetworkPolicy33.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l4-port-range-rule"
spec:
  endpointSelector:
    matchLabels:
      app: myService
  egress:
    - toPorts:
      - ports:
        - port: "80"
          endPort: 444
          protocol: TCP

# The following rule limits all endpoints with the label app=myService to only
#  be able to emit packets using TCP on ports 80-444, to any layer 3 destination:
