cilium_netpolicy_examples/CiliumNetworkPolicy44.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "isolate-ns1"
  namespace: ns1
spec:
  endpointSelector:
    matchLabels:
      {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        {}
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "isolate-ns1"
  namespace: ns2
spec:
  endpointSelector:
    matchLabels:
      {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        {}

# The example locks down ingress of the pods in ns1 and ns2. This means that the pods can still 
# communicate egress to anywhere unless the destination is in either ns1 or ns2 in which case both 
# source and destination have to be in the same namespace. In order to enforce namespace boundaries 
# at egress, the same example can be used by specifying the rules at egress in addition to ingress.
