cilium_netpolicy_examples/zzzzCiliumNetworkPolicy12.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
spec:
  description: L7 policy to allow public terminals to call GetName, GetLocation, and RequestMaintenance, but not GetState, or SetAccessCode on the Door Manager Service
  endpointSelector:
    matchLabels:
      app: cc-door-mgr
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: public-terminal
    toPorts:
    - ports:
      - port: "50051"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/cloudcity.DoorManager/GetName"
        - method: "POST"
          path: "/cloudcity.DoorManager/GetLocation"
        - method: "POST"
          path: "/cloudcity.DoorManager/RequestMaintenance"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cc-door-mgr
    zgroup: grpcExample
  name: cc-door-mgr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cc-door-mgr
  template:
    metadata:
      labels:
        app: cc-door-mgr
        zgroup: grpcExample
    spec:
      containers:
      - name: cc-door-mgr
        image: docker.io/cilium/cc-grpc-demo:v3.0
        imagePullPolicy: IfNotPresent
        command: ["python3"]
        args: ["/cloudcity/cc_door_server.py"]
        ports:
        - containerPort: 50051
          name:          grpc
        livenessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 30
          failureThreshold: 10
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cc-door-server
    zgroup: grpcExample
  name: cc-door-server
spec:
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: cc-door-mgr
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: public-terminal
    zgroup: grpcExample
  name: terminal-87
spec:
  containers:
  - name: cc-door-client
    image: docker.io/cilium/cc-grpc-demo:v3.0
    imagePullPolicy: IfNotPresent
    command: ["sleep"]
    args: ["300000"]
